update scroll issues on mobile

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Quicksand', sans-serif;
-    overflow: scroll;
+    overflow-x: hidden;
     max-width: 100vw;
     margin: 0;
     padding: 0;
@@ -258,6 +258,10 @@ body {
     }
 
     .grid-spacer, .top-left, .people-container {
+        display: none;
+    }
+
+    .card-text {
         display: none;
     }
 }
